Challenge Completed and modified

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp"
+        android:fontFamily="monospace"
         android:text="@string/title"
-        android:textColor="@android:color/black"
-        android:textSize="40sp" />
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50sp" />
 
     <ImageView
         android:id="@+id/imageView"
